# IdhagnMemes-rs

./: .gitignore  Cargo.toml  README.md
src/: color.rs  image.rs  lib.rs  memes.rs  options.rs  registry.rs  text.rs
src/memes/: addict.rs  cxk.rs  deepseek.rs  dots.rs  flash.rs  good_answer.rs  indihome.rs  louvre.rs  make_sound.rs  netease_mc.rs  nokia.rs  ori.rs  orly.rs  patrick.rs  wave.rs
