[package]
name = "idhagnmemes"
description = "Memes from IdhagnBot for meme-generator-rs."
version = "0.0.1"
authors = ["su226 <thesu226@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/su226/IdhagnMemes-rs"
repository = "https://github.com/su226/IdhagnMemes-rs"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inventory = "0.3"
serde = "1.0"
skia-safe = { version = "0.80", features = ["textlayout"] }
meme_generator_core = "0.0.4"
meme_generator_utils = "0.0.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
